--- a/Template/index.html
+++ b/Template/index.html
@@ -181,7 +181,8 @@ function resetResult(){
       </h3>
       
           <div class="row flex-center">
-              <p> Some crap about how and what this is</p>
+              <p> ●   A web app to help employers by analysing resumes and CVs, surfacing candidates that best match the position and filtering out those who don't. </p>
+                <p> ●   Used recommendation engine techniques such as KNN, content based filtering for fuzzy matching job description with multiple resumes.</p>
             </div>
      
     </div>
